Refactor move jetty into separate module